# Readercoin

readercoin/: .appveyor.yml  .fuzzbuzz.yml  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Makefile.am  README.md  SECURITY.md  autogen.sh  configure.ac  libreadercoinconsensus.pc.in
readercoin/.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
readercoin/.tx/: config
readercoin/build_msvc/: .gitignore  README.md  libsecp256k1_config.h  msvc-autogen.py  readercoin.sln  readercoin_config.h
readercoin/ci/: test_run_all.sh
readercoin/contrib/: README.md  filter-lcov.py  gitian-build.py  install_db4.sh  readercoin-cli.bash-completion  readercoin-qt.pro  readercoind.bash-completion  valgrind.supp
readercoin/depends/: Makefile  README.md  description.md  packages.md
readercoin/doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  REST-interface.md  benchmarking.md  bips.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  dependencies.md  descriptors.md  developer-notes.md  files.md  fuzzing.md  init.md  multiprocess.md  productivity.md  psbt.md  readercoin-conf.md  reduce-memory.md  reduce-traffic.md  release-notes-15937.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  zmq.md
readercoin/doc/man/: Makefile.am  readercoin-cli.1  readercoin-qt.1  readercoin-tx.1  readercoin-wallet.1  readercoind.1
readercoin/share/: genbuild.sh  setup.nsi.in
readercoin/src/: Makefile.am  Makefile.bench.include  addrdb.cpp  (+147 more)
(+1022 files in other folders)
