dist_man1_MANS=

if BUILD_READERCOIND
  dist_man1_MANS+=readercoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=readercoin-qt.1
endif

if BUILD_READERCOIN_CLI
  dist_man1_MANS+=readercoin-cli.1
endif

if BUILD_READERCOIN_TX
  dist_man1_MANS+=readercoin-tx.1
endif

if ENABLE_WALLET
if BUILD_READERCOIN_WALLET
  dist_man1_MANS+=readercoin-wallet.1
endif
endif
